<resources>
    <string name="app_name">Plumbus</string>

    <string name="new_entry_title">New Entry</string>
    <string name="new_entry_name">Entry Name</string>
    <string name="new_entry_name_placeholder">What\'s my name?</string>
    <string name="new_entry_desc">Description</string>
    <string name="new_entry_desc_placeholder">What\'s my life\'s story</string>
    <string name="new_entry_price">Amount</string>

    <!--CATEGORIES-->
    <string name="create_food">FOOD</string>
    <string name="create_life">LIFE</string>
    <string name="create_fun">FUN</string>
    <string name="create_ninja">NINJA</string>




</resources>
